--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard</title>
-</head>
+    <link rel="stylesheet" href="assets/style.css">
+</head> 
 <body>
     <main>
         <section id="container">
