--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <p>O que é JavaScript?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de programação</p>
+                        <p>O CSS é uma linguagem de estilização</p>
                     </div>
                 </div>
             </article>
