--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é JavaScript?</p>
+                        <p>O que é CSS?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
                         <p>O CSS é uma linguagem de estilização</p>
