--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flashcard</title>
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-</head> 
+    <link rel="preconnect" href="https://fonts.googleapis.com"&gt;
+    <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap&quot; rel="stylesheet">
+    <title>FlashCard</title>
+</head>
 <body>
     <main>
         <section id="container">
@@ -33,21 +34,10 @@
                     </div>
                 </div>
             </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Programação</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>O que é CSS?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        <p>O CSS é uma linguagem de estilização</p>
-                    </div>
-                </div>
-            </article>
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+        <p>Projeto desenvolvido pelo 2º ano do colégio Monteiro Lobato, sem fins lucrativos</p>
     </footer>
 </body>
 </html>
